k8s/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-alert-worker
  namespace: traktor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-alert-worker
  template:
    metadata:
      labels:
        app: order-alert-worker
    spec:
      containers:
        - name: worker
          image: docker.io/krisdigitx/ecommerce-order-alerts:latest
          imagePullPolicy: Always
          command: ["python", "-m", "app.workers.poll_orders"]
