k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-alert-api
  namespace: traktor
spec:
  type: ClusterIP
  selector:
    app: order-alert-api
  ports:
    - name: http
      port: 80
      targetPort: 8000
