k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-alert-api
  namespace: ecommerce-alerts
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: orders.home.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-alert-api
                port:
                  number: 80
